# HardQode_task

./: Dockerfile  README.md  db.sqlite3  pyproject.toml
requirements/: dev.txt
src/: settings.py  urls.py
src/app/: admin.py  models.py  serializers.py  urls.py  views.py
src/app/migrations/: 0001_initial.py
